tests/baselines/reference/thisTypeInClasses.errors.txt
tests/cases/conformance/types/thisType/thisTypeInClasses.ts(35,37): error TS2322: Type 'C5' is not assignable to type 'this'.
  'C5' is assignable to the constraint of type 'this', but 'this' could be instantiated with a different subtype of constraint 'C5'.
tests/cases/conformance/types/thisType/thisTypeInClasses.ts(42,22): error TS2345: Argument of type 'C5' is not assignable to parameter of type 'this'.
  'C5' is assignable to the constraint of type 'this', but 'this' could be instantiated with a different subtype of constraint 'C5'.


==== tests/cases/conformance/types/thisType/thisTypeInClasses.ts (2 errors) ====
    class C1 {
        x: this;
        f(x: this): this { return undefined; }
    }
    
    class C2 {
        [x: string]: this;
    }
    
    interface Foo<T> {
        x: T;
        y: this;
    }
    
    class C3 {
        a: this[];
        b: [this, this];
        c: this | Date;
        d: this & Date;
        e: (((this)));
        f: (x: this) => this;
        g: new (x: this) => this;
        h: Foo<this>;
        i: Foo<this | (() => this)>;
        j: (x: any) => x is this;
    }
    
    declare class C4 {
        x: this;
        f(x: this): this;
    }
    
    class C5 {
        foo() {
            let f1 = (x: this): this => this;
                                        ~~~~
!!! error TS2322: Type 'C5' is not assignable to type 'this'.
!!! error TS2322:   'C5' is assignable to the constraint of type 'this', but 'this' could be instantiated with a different subtype of constraint 'C5'.
            let f2 = (x: this) => this;
            let f3 = (x: this) => (y: this) => this;
            let f4 = (x: this) => {
                let g = (y: this) => {
                    return () => this;
                }
                return g(this);
                         ~~~~
!!! error TS2345: Argument of type 'C5' is not assignable to parameter of type 'this'.
!!! error TS2345:   'C5' is assignable to the constraint of type 'this', but 'this' could be instantiated with a different subtype of constraint 'C5'.
            }
        }
        bar() {
            let x1 = <this>undefined;
            let x2 = undefined as this;
        }
    }
    